fix overlap timer in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -65,12 +65,10 @@ h2 {
   border-radius: 1px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  margin-top: 3em;
-  padding: 3em;
+  padding: 1.5em;
   text-align: center;
-  margin-right: 3em;
 }
 
 section p:first-child, .timer div:last-child span {
-  font-size: 3em;
+  font-size: 2.5em;
 }
